--- a/projects/index.html
+++ b/projects/index.html
@@ -69,10 +69,10 @@
 {
   "@context": "https://schema.org",
   "@type": "BreadcrumbList",
-  "itemListElement": [, 
+  "itemListElement": [
     {
       "@type": "ListItem",
-      "position":  2 ,
+      "position":  1 ,
       "name": "Projects",
       "item": "https://steffenhaeussler.github.io/projects/"
     }
@@ -96,7 +96,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://steffenhaeussler.github.io" accesskey="h" title="About me (Alt + H)">About me</a>
+            <a href="https://steffenhaeussler.github.io/" accesskey="h" title="About me (Alt + H)">About me</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -150,7 +150,7 @@
     </nav>
 </header>
 <main class="main"> 
-<header class="page-header"><div class="breadcrumbs"><a href="https://steffenhaeussler.github.io">Home</a></div>
+<header class="page-header"><div class="breadcrumbs"><a href="https://steffenhaeussler.github.io/">Home</a></div>
   <h1>
     Projects
   </h1>
@@ -170,7 +170,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://steffenhaeussler.github.io">About me</a></span>
+    <span>&copy; 2023 <a href="https://steffenhaeussler.github.io/">About me</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
