--- a/projects/index.html
+++ b/projects/index.html
@@ -55,7 +55,8 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Projects" />
+</noscript>
+<meta property="og:title" content="Projects" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://steffenhaeussler.github.io/projects/" />
