--- a/projects/first/index.html
+++ b/projects/first/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="test">
 <meta name="author" content="">
 <link rel="canonical" href="https://steffenhaeussler.github.io/projects/first/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.38543ae4b8e264d5fd3444f5e0ee9e36fba2060d580b5ee7046c7723c02525d5.css" integrity="sha256-OFQ65LjiZNX9NET14O6eNvuiBg1YC17nBGx3I8AlJdU=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.fb1f72c043d79eb7fc23a358b7843ebc2a418a4dcdec49e500cdfe86dafa1eb2.css" integrity="sha256-&#43;x9ywEPXnrf8I6NYt4Q&#43;vCpBik3N7EnlAM3&#43;htr6HrI=" rel="preload stylesheet" as="style">
 <script defer crossorigin="anonymous" src="/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js" integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG&#43;9vmJ0cTS&#43;ovo0FeA="
     onload="hljs.initHighlightingOnLoad();"></script>
 <link rel="icon" href="https://steffenhaeussler.github.io/assets/favicon.ico">
