--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://steffenhaeussler.github.io/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.fb1f72c043d79eb7fc23a358b7843ebc2a418a4dcdec49e500cdfe86dafa1eb2.css" integrity="sha256-&#43;x9ywEPXnrf8I6NYt4Q&#43;vCpBik3N7EnlAM3&#43;htr6HrI=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.c32c3fa257f14f25741bf9b4bf26c500e50fe88bb7915cdb5f59134fcd019ee5.css" integrity="sha256-wyw/olfxTyV0G/m0vybFAOUP6Iu3kVzbX1kTT80BnuU=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://steffenhaeussler.github.io/assets/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://steffenhaeussler.github.io/assets/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://steffenhaeussler.github.io/assets/favicon-32x32.png">
@@ -18,6 +18,7 @@
 <link rel="mask-icon" href="https://steffenhaeussler.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
+<link rel="alternate" hreflang="en" href="https://steffenhaeussler.github.io/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -35,7 +36,7 @@
                 --secondary: rgb(155, 156, 157);
                 --tertiary: rgb(65, 66, 68);
                 --content: rgb(196, 196, 197);
-                --hljs-bg: rgb(46, 46, 51);
+                --code-block-bg: rgb(46, 46, 51);
                 --code-bg: rgb(55, 56, 62);
                 --border: rgb(51, 51, 51);
             }
@@ -55,14 +56,14 @@
 
     </style>
 </noscript>
-<meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://steffenhaeussler.github.io/404.html" />
-
-<meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content=""/>
+<meta property="og:url" content="https://steffenhaeussler.github.io/404.html">
+  <meta property="og:site_name" content="About me">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:locale" content="en-us">
+  <meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:description" content="">
 
 </head>
 
@@ -103,17 +104,14 @@
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
+                <ul class="lang-switch"><li>|</li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
                 <a href="https://steffenhaeussler.github.io/posts/" title="Posts">
                     <span>Posts</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://steffenhaeussler.github.io/projects/" title="Projects">
-                    <span>Projects</span>
                 </a>
             </li>
             <li>
@@ -134,7 +132,8 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://steffenhaeussler.github.io/">About me</a></span>
+        <span>&copy; 2024 <a href="https://steffenhaeussler.github.io/">About me</a></span> · 
+
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
